<resources>
    <string name="app_name">GstHub</string>
    <string name="teacher">TEACHER</string>
    <string name="student">Student</string>
    <string name="guest">Guest</string>
    <string name="alumni">alumni</string>
    <string name="or">OR</string>
    <string name="sign_in_using_google">Sign in using Google</string>
    <string name="sign_in_using_outlook">Sign in using Outlook</string>
    <string name="sign_in_as_teacher">Sign in As Teacher</string>
    <string name="create_account_as_teacher">Create Account as Teacher</string>
    <string name="sign_up_using_google">sign up using google</string>
    <string name="gsthub">Gsthub</string>
    <string name="sign_up_as_outlook">sign up as outlook</string>
    <string name="already_have_an_account_sign_in">Already have an Account? Sign in</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_using_outlook">Sign up using outlook</string>
    <string name="name">Name:</string>
    <string name="department">Department:</string>
    <string name="contact_no">Contact No.:</string>
    <string name="qualifications">Qualifications:</string>
    <string name="create_your_profile">Create your Profile</string>
    <string name="proceed">Proceed</string>
    <string name="my_profile">My Profile</string>
    <string name="save">Save</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GstHub</string>
    <string name="nav_header_subtitle">abc@gst.sies.edu.in</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>


    <string name="create_acc_text">Don\'t have an account? Create one!</string>
    <string name="hello">Hello!</string>

    <string-array name="guest_array">
        <item>Parent</item>
        <item>Student</item>
        <item>Teacher</item>
        <item>Lecturer</item>
        <item>Others...</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aboutus">This is an online forum app specially designed for the students of SIES GST where we provide a platform for all the gstians to get their queries out there which can be answered by not only teachers but also by seniors, alumni and others. \nCreated by \nNandita Nandakumar \nPournami Pottekat \nNipun Manghi \nRohitRaghuram</string>


</resources>