<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccStudent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/GstHub"
        android:text="@string/gsthub"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TeacherSignInTitle"
        android:text="Create Account"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/GstHub"
        android:layout_marginBottom="60dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/GoogleSignIn"
        android:text="@string/sign_up_using_google"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/TeacherSignInTitle" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/or"
        android:text="@string/or"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/GoogleSignIn"
        android:layout_margin="20dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/OutlookSignIn"
        android:text="@string/sign_up_as_outlook"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/or"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alreadyacc"
        android:text="@string/already_have_an_account_sign_in"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/OutlookSignIn"
        android:layout_marginTop="50dp"/>

</RelativeLayout>