<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInAs">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SignInAs"
        android:text="Sign Up As?"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/signInTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SignInAs"
        android:layout_centerHorizontal="true"
        android:text="@string/teacher"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/signInStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInTeacher"
        android:layout_centerHorizontal="true"
        android:text="@string/student"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/signInAlumni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInStudent"
        android:layout_centerHorizontal="true"
        android:text="@string/alumni"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/signInGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInAlumni"
        android:layout_centerHorizontal="true"
        android:text="@string/guest"
        android:layout_margin="10dp"/>

</RelativeLayout>