<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".Dashboard"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/nav_header_desc"
            android:src="@drawable/ic_launcher_foreground"/>
           <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/UserNameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nav_header_title"
            android:textSize="15dp"
            android:textColor="@color/White"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/UserEmailView"
            android:text="@string/nav_header_subtitle"
            android:textSize="15dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/White" />

    </LinearLayout>
